deploy: c7601cb251493120dc2553c2f036a52d00943784

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <body>
 <h1>The requested page does not exist</h1>
 <p>
-    <a href="https://belgian-jug.github.io">Return the BeJUG website.</a>
+    <a href="https://bejug.github.io">Return the BeJUG website.</a>
 </p>
 </body>
 </html>
