--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="p-2"><a style="color: #55acee" href="https://twitter.com/BeJUG" role="button"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li class="p-2"><a style="color: #333" href="https://github.com/belgian-jug" role="button"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="p-2"><a style="color: #333" href="https://github.com/bejug" role="button"><i class="fa-brands fa-github"></i></a></li>
                 </ul>
             </div>
         </div>
