--- a/events-archive.html
+++ b/events-archive.html
@@ -49,9 +49,34 @@
     <ul class="list-unstyled">
             <li class="mb-2">
                 <div class="title">
-                    <a href="https://www.meetup.com/belgian-java-user-group/events/289451067/">Brussels - Thu 24 November 2022</a>
+                        <a href="https://devoxx.be/">Devoxx 2023</a>
                 </div>
                 <span>
+                    Antwerp - Mon 2 October 2023
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                        <a href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
+                </div>
+                <span>
+                    Brussels - Sun 5 February 2023
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                        BeJUG January
+                </div>
+                <span>
+                    TBD - Mon 23 January 2023
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                        <a href="https://www.meetup.com/belgian-java-user-group/events/289451067/">BeJUG November</a>
+                </div>
+                <span>
+                    Brussels - Thu 24 November 2022
                         <ul class="list-unstyled">
                                 <li class="ms-4">
                                     How Java 19 influences the future of your high-scale Java Applications
