--- a/index.html
+++ b/index.html
@@ -54,6 +54,30 @@
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    BeJUG January
+                            </div>
+                            <span>
+                                TBD - Mon 23 January 2023
+                            </span>
+                        </li>
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
+                            </div>
+                            <span>
+                                Brussels - Sun 5 February 2023
+                            </span>
+                        </li>
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://devoxx.be/">Devoxx 2023</a>
+                            </div>
+                            <span>
+                                Antwerp - Mon 2 October 2023
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/belgian-jug/belgian-jug.github.io/blob/main/data/events.yml">Add event</a>
                     /
@@ -62,13 +86,15 @@
             </ul>
         </div>
     </div>
-            <p><b><a href="https://www.meetup.com/belgian-java-user-group/">Check our meetup page</a></b></p>
+            <div class="mb-4">
+                <a class="btn btn-primary" role="button" href="https://www.meetup.com/belgian-java-user-group/">Check our Meetup page</a>
+            </div>
             <h2>How to</h2>
-            <ul class="list-unstyled">
+            <ul class="list-unstyled mb-4">
                 <li>Want to speak at the meetup? Send us a message either on Meetup.com, via DM on Twitter... or talk to us directly at an event.</li>
                 <li>Want to host the BeJUG at your company? Read the partnership guidelines and get in touch!</li>
             </ul>
-            <div class="m-5">
+            <div class="mb-4">
                 <a class="m-1" style="color: #55acee" href="https://twitter.com/BeJUG" role="button"><i class="fa-brands fa-twitter"></i></a>
                 <a class="m-1" style="color: #333" href="https://github.com/belgian-jug" role="button"><i class="fa-brands fa-github"></i></a>
             </div>
