--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -157,6 +157,30 @@ A partner should be able to provide:</p>
         <div class="card-header">Upcoming events</div>
         <div class="card-body">
             <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <div class="title">
+                                    BeJUG January
+                            </div>
+                            <span>
+                                TBD - Mon 23 January 2023
+                            </span>
+                        </li>
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
+                            </div>
+                            <span>
+                                Brussels - Sun 5 February 2023
+                            </span>
+                        </li>
+                        <li class="mb-2">
+                            <div class="title">
+                                    <a href="https://devoxx.be/">Devoxx 2023</a>
+                            </div>
+                            <span>
+                                Antwerp - Mon 2 October 2023
+                            </span>
+                        </li>
                 <div class="small float-end">
                     <a href="https://github.com/belgian-jug/belgian-jug.github.io/blob/main/data/events.yml">Add event</a>
                     /
