deploy: 6972585c516fa6f0dc28259034d950adee133bad

--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
                                     BeJUG January
                             </div>
                             <span>
-                                TBD - Mon 23 January 2023
+                                Mechelen - Mon 23 January 2023
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                Quarkus 101: Intro To Java Development With Quarkus
+                                                    <span class="small">by Kevin Dubois</span>
+                                            </li>
+                                    </ul>
                             </span>
                         </li>
                         <li class="mb-2">
