--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -162,7 +162,13 @@ A partner should be able to provide:</p>
                                     BeJUG January
                             </div>
                             <span>
-                                TBD - Mon 23 January 2023
+                                Mechelen - Mon 23 January 2023
+                                    <ul class="list-unstyled">
+                                            <li class="ms-4">
+                                                Quarkus 101: Intro To Java Development With Quarkus
+                                                    <span class="small">by Kevin Dubois</span>
+                                            </li>
+                                    </ul>
                             </span>
                         </li>
                         <li class="mb-2">
