--- a/events-archive.html
+++ b/events-archive.html
@@ -57,6 +57,28 @@
             </li>
             <li class="mb-2">
                 <div class="title">
+                        <a href="https://brussels.voxxeddays.com/">Voxxed Days Brussels 2023</a>
+                </div>
+                <span>
+                    Brussels - Tue 23 May 2023
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                        <a href="https://www.meetup.com/belgian-java-user-group/events/290693260/">BeJUG March</a>
+                </div>
+                <span>
+                    Kortrijk - Thu 30 March 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    What the CRaC - Superfast JVM startup
+                                        <span class="small">by Gerrit Grunwald</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                         <a href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
                 </div>
                 <span>
@@ -65,7 +87,7 @@
             </li>
             <li class="mb-2">
                 <div class="title">
-                        BeJUG January
+                        <a href="https://www.meetup.com/belgian-java-user-group/events/290631492/">BeJUG January</a>
                 </div>
                 <span>
                     Mechelen - Mon 23 January 2023
