deploy: 13cff6e0b4ee2d4c7818bb7b20050c2aa01075c5

--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -53,7 +53,7 @@
 <div class="paragraph">
 <p>The BeJUG is always looking for more partners that want to host one of our meetups.
 This document describes what we are looking for.
-We would love it if you drop us a message here on meetup if you are interested in hosting.</p>
+We would love it if you drop us a message, either as a direct message <a href="https://www.meetup.com/belgian-java-user-group/">on Meetup.com</a> or though mail via &lt;belgian (dot) jug (a) gmail (dot) com&gt; if you are interested in hosting.</p>
 </div>
 </div>
 </div>
@@ -111,7 +111,7 @@ A partner should be able to provide:</p>
 <div class="ulist">
 <ul>
 <li>
-<p>We bring speakers to your company, which provides your employees to learn from others outside "your bubble";</p>
+<p>We bring speakers to your company, which gives your employees the opportunity to learn from others outside "your bubble";</p>
 </li>
 <li>
 <p>Members of our meetup will visit the location you provide, which associates your company with being an active member of the Java Community;</p>
