deploy: 3a4a3d4ef494f5a784ee48610a80eee7a0e4edb3

--- a/events-archive.html
+++ b/events-archive.html
@@ -65,6 +65,34 @@
             </li>
             <li class="mb-2">
                 <div class="title">
+                        <a href="https://www.meetup.com/belgian-java-user-group/events/292729580/">BeJUG Speaker Training April</a>
+                </div>
+                <span>
+                    Brussel - Thu 27 April 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Speaker Training
+                                        <span class="small">by Tom Cools & Olivier Hubaut</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
+                        <a href="https://www.meetup.com/belgian-java-user-group/events/292156325/">BeJUG April</a>
+                </div>
+                <span>
+                    Leuven - Tue 18 April 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    The next generation of Spring applications is here!
+                                        <span class="small">by Stéphane Nicoll</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                         <a href="https://www.meetup.com/belgian-java-user-group/events/290693260/">BeJUG March</a>
                 </div>
                 <span>
