--- a/index.html
+++ b/index.html
@@ -56,36 +56,28 @@
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/290631492/">BeJUG January</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/292156325/">BeJUG April</a>
                             </div>
                             <span>
-                                Mechelen - Mon 23 January 2023
+                                Leuven - Tue 18 April 2023
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                Quarkus 101: Intro To Java Development With Quarkus
-                                                    <span class="small">by Kevin Dubois</span>
+                                                The next generation of Spring applications is here!
+                                                    <span class="small">by Stéphane Nicoll</span>
                                             </li>
                                     </ul>
                             </span>
                         </li>
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://fosdem.org/2023/schedule/track/friends_of_openjdk/">Fosdem 2023</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/292729580/">BeJUG Speaker Training April</a>
                             </div>
                             <span>
-                                Brussels - Sun 5 February 2023
-                            </span>
-                        </li>
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/290693260/">BeJUG March</a>
-                            </div>
-                            <span>
-                                Kortrijk - Thu 30 March 2023
+                                Brussel - Thu 27 April 2023
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                What the CRaC - Superfast JVM startup
-                                                    <span class="small">by Gerrit Grunwald</span>
+                                                Speaker Training
+                                                    <span class="small">by Tom Cools & Olivier Hubaut</span>
                                             </li>
                                     </ul>
                             </span>
