deploy: bbe018111642668ea5774f26256a790e24a38a05

--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -162,38 +162,20 @@ A partner should be able to provide:</p>
             <ul class="list-unstyled">
                         <li class="mb-2">
                             <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/292156325/">BeJUG April</a>
+                                    <a href="https://www.meetup.com/belgian-java-user-group/events/293805252/">Hybrid Cloud Applications and Cloud-Native Dev Tools</a>
                             </div>
                             <span>
-                                Leuven - Tue 18 April 2023
+                                Brussel - Thu 22 June 2023
                                     <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                The next generation of Spring applications is here!
-                                                    <span class="small">by Stéphane Nicoll</span>
+                                                Hybrid Cloud Applications Built with Pure Openness
+                                                    <span class="small">by Emily Jiang</span>
                                             </li>
-                                    </ul>
-                            </span>
-                        </li>
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://www.meetup.com/belgian-java-user-group/events/292729580/">BeJUG Speaker Training April</a>
-                            </div>
-                            <span>
-                                Brussel - Thu 27 April 2023
-                                    <ul class="list-unstyled">
                                             <li class="ms-4">
-                                                Speaker Training
-                                                    <span class="small">by Tom Cools & Olivier Hubaut</span>
+                                                Cloud-Native Dev Tools: Bringing the cloud back to earth
+                                                    <span class="small">by Grace Jansen</span>
                                             </li>
                                     </ul>
-                            </span>
-                        </li>
-                        <li class="mb-2">
-                            <div class="title">
-                                    <a href="https://brussels.voxxeddays.com/">Voxxed Days Brussels 2023</a>
-                            </div>
-                            <span>
-                                Brussels - Tue 23 May 2023
                             </span>
                         </li>
                         <li class="mb-2">
