deploy: c4031a9585532ee1366d6c762cd2c955007b4a4f

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     <div class="container py-4">
         <div class="text-center">
-            <div class="m-4">
-                <img src="logo.png" alt="Logo">
+            <div>
+                <img src="logo.png" alt="Logo" width="30%">
             </div>
             <h1>The Belgian Java User Group</h1>
     <div class="card mb-4">
