--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -81,7 +81,7 @@ Alternative sessions such as workshops, hackergardens and unconf-discussions are
 <div class="sectionbody">
 <div class="paragraph">
 <p>To facilitate the Meetups, we need a place to gather.
-We are looking for partners to provide us a location. Typically these are companies with a JVM focussed development team.
+We are looking for partners to provide us a location. Typically, these are companies with a JVM focussed development team.
 A partner should be able to provide:</p>
 </div>
 <div class="ulist">
@@ -101,7 +101,7 @@ A partner should be able to provide:</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>Additional aspects such as reachability, accessibility and are a plus.</p>
+<p>Additional aspects such as reachability and accessibility are a plus.</p>
 </div>
 </div>
 </div>
@@ -117,23 +117,33 @@ A partner should be able to provide:</p>
 <p>Members of our meetup will visit the location you provide, which associates your company with being an active member of the Java Community;</p>
 </li>
 <li>
-<p>A big thank you during the introduction and ending of the event;</p>
+<p>A big thank you during the introduction and ending of the event by a member of the BeJUG organisation;</p>
 </li>
 <li>
-<p>When announcing the event, your company name will be included in the announcement (with social links @PARTNER_NAME);</p>
+<p>When announcing the event and in all communication about the event afterwards, your company name will be included in the announcement (with social links @PARTNER_NAME);</p>
 </li>
 </ul>
 </div>
 <div class="paragraph">
-<p>A member of the BeJUG will make sure the introduction and ending of the evening includes a mention of your company name.</p>
+<p>We believe the above provides a lot of value to you as a host.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_what_does_jug_belgium_do">What does JUG Belgium do?</h2>
+<h2 id="_what_does_belgium_jug_do">What does Belgium JUG do?</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We invite the speakers, setup the invite mailing and registration form.</p>
+<p>We:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Search and invite the speakers: these are occasionally top speakers you could find at conferences like Devoxx!</p>
+</li>
+<li>
+<p>Setup the invite mailing and registration form: we use Meetup.com for this.</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -150,6 +160,9 @@ A partner should be able to provide:</p>
 </li>
 <li>
 <p>As a default, we do not allow employees of the hosting company to present a full session that same evening. Exceptions may be made due to planning constraints;</p>
+</li>
+<li>
+<p>For historical reasons and to not give a company any preferential treatment, we do not leave room for the hosting company to introduce themselves or present any sort of "promo" talk for the company;</p>
 </li>
 </ul>
 </div>
