--- a/events-archive.html
+++ b/events-archive.html
@@ -57,6 +57,20 @@
             </li>
             <li class="mb-2">
                 <div class="title">
+                        <a href="https://www.meetup.com/belgian-java-user-group/events/294251222/">Growing Beyond Senior</a>
+                </div>
+                <span>
+                    Gembloux - Fri 7 July 2023
+                        <ul class="list-unstyled">
+                                <li class="ms-4">
+                                    Growing Beyond Senior
+                                        <span class="small">by Bruno Souza</span>
+                                </li>
+                        </ul>
+                </span>
+            </li>
+            <li class="mb-2">
+                <div class="title">
                         <a href="https://www.meetup.com/belgian-java-user-group/events/293805252/">Hybrid Cloud Applications and Cloud-Native Dev Tools</a>
                 </div>
                 <span>
