deploy: de48aaa69c04416177ad30d3093e639507dbabba

--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -90,7 +90,7 @@ A partner should be able to provide:</p>
 <p>(Required) A place for our speakers to present their session (beamer/screen, HDMI connection, internet)</p>
 </li>
 <li>
-<p>(Required) Enough room for our meetup members to gather</p>
+<p>(Required) Enough room for our meetup members to gather (min 50, preferably more)</p>
 </li>
 <li>
 <p>(Optional) Drinks</p>
@@ -133,15 +133,18 @@ A partner should be able to provide:</p>
 <h2 id="_what_does_belgium_jug_do">What does Belgium JUG do?</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>We:</p>
+<p>We act as organizers. We:</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Search and invite the speakers: these are occasionally top speakers you could find at conferences like Devoxx!</p>
+<p>Search and invite the speakers and create a program for the event: these are occasionally top speakers you could find at conferences but we do give plenty of opportunities to lesser known speakers! The exact speakers which speak at an event are at our discretion and can be changed when needed;</p>
 </li>
 <li>
-<p>Setup the invite mailing and registration form: we use Meetup.com for this.</p>
+<p>Setup the invite mailing and registration form: we use Meetup.com for this;</p>
+</li>
+<li>
+<p>Promote the event on our social media channels.</p>
 </li>
 </ul>
 </div>
@@ -163,6 +166,9 @@ A partner should be able to provide:</p>
 </li>
 <li>
 <p>For historical reasons and to not give a company any preferential treatment, we do not leave room for the hosting company to introduce themselves or present any sort of "promo" talk for the company;</p>
+</li>
+<li>
+<p>After the event is announced on the official BeJUG channels, the host will receive a set of links (1 for each platform) so they can retweet/repost/share among their own network.</p>
 </li>
 </ul>
 </div>
