--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -34,6 +34,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="partnership-guidelines.html">Partnership-guidelines</a></li>
+                    <li class="nav-item"><a class="nav-link" href="visit-belgium-tips.html">Visit Belgium Tips</a></li>
                     <li class="nav-item"><a class="nav-link" href="events-archive.html">Events archive</a></li>
                 </ul>
                 <ul class="navbar-nav">
