deploy: 3d4d1dfdf2fd2171bd89d9068f344d64566c6462

--- a/visit-belgium-tips.html
+++ b/visit-belgium-tips.html
@@ -19,6 +19,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css"
           integrity="sha256-AbA177XfpSnFEvgpYu1jMygiLabzPCJCRIBtR5jGc0k=" crossorigin="anonymous">
     <link href="favicon.png" rel="shortcut icon">
+    <style>
+        /* Styling for AsciiDoc NOTE */
+        .admonitionblock.note {
+            background-color: var(--fbc-secondary-text);
+            padding: 10px;
+            color: #fff;
+            margin-bottom: 10px;
+        }
+
+        .title {
+            text-transform: uppercase;
+        }
+
+        .content {
+            padding-left: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -76,46 +93,46 @@ BeJUG did not get any kind of sponsorship or deal from any of the places listed 
 <div class="sect3">
 <h4 id="_zoo_of_antwerp">Zoo of Antwerp</h4>
 <div class="paragraph">
-<p>The <a href="https://www.zooantwerpen.be/en/">Zoo of Antwerp</a> is the oldest animal park in the country and one of the oldest in the world, established on 21 July 1843. It&#8217;s located in the city center, next to the central station.</p>
+<p>The <a href="https://www.zooantwerpen.be/en/" target="_blank" rel="noopener">Zoo of Antwerp</a> is the oldest animal park in the country and one of the oldest in the world, established on 21 July 1843. It&#8217;s located in the city center, next to the central station.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_flandria_boat_waterbus">Flandria Boat / Waterbus</h4>
 <div class="paragraph">
-<p><em>A <a href="https://flandria.nu/en/homepage-en/">Flandria boat tour</a> is the perfect way to discover Antwerp and its world-class port from a different angle.</em></p>
+<p><em>A <a href="https://flandria.nu/en/homepage-en/" target="_blank" rel="noopener">Flandria boat tour</a> is the perfect way to discover Antwerp and its world-class port from a different angle.</em></p>
 </div>
 <div class="paragraph">
-<p><a href="https://www.dewaterbus.be/en">DeWaterbus</a> is a cheaper alternative as it&#8217;s more a public transport, that connects the center of Antwerp with the port and neighbouring cities like Kruibeke and Hemiksem.</p>
+<p><a href="https://www.dewaterbus.be/en" target="_blank" rel="noopener">DeWaterbus</a> is a cheaper alternative as it&#8217;s more a public transport, that connects the center of Antwerp with the port and neighbouring cities like Kruibeke and Hemiksem.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_brewery_de_koninck">Brewery De Koninck</h4>
 <div class="paragraph">
-<p><em>The most fun adventure in Antwerp? A <a href="https://www.dekoninck.be/en/interactive-tour">tour through our City Brewery</a>! That is not only a must-see, but especially a must-do due to the countless interactive experiences.</em></p>
+<p><em>The most fun adventure in Antwerp? A <a href="https://www.dekoninck.be/en/interactive-tour" target="_blank" rel="noopener">tour through our City Brewery</a>! That is not only a must-see, but especially a must-do due to the countless interactive experiences.</em></p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_the_playground">The Playground</h4>
 <div class="paragraph">
-<p>For boardgame lovers! <em>Are you up for some games? Browse our collection of more than 400 games that you can play right here at <a href="https://www.facebook.com/theplaygroundx/">The Playground</a>. As a board game café and shop, our aim is to provide you with plenty of games to play, quality coffee, Belgian beers, and more.</em></p>
+<p>For boardgame lovers! <em>Are you up for some games? Browse our collection of more than 400 games that you can play right here at <a href="https://www.facebook.com/theplaygroundx/" target="_blank" rel="noopener">The Playground</a>. As a board game café and shop, our aim is to provide you with plenty of games to play, quality coffee, Belgian beers, and more.</em></p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_red_star_line_museum">Red Star Line Museum</h4>
 <div class="paragraph">
-<p><em>Two million passengers made the crossing from Antwerp to North America aboard the steamships of the Red Star Line. Their story, that of the shipping company that transported them and that of the city and the port from which they departed, are central to the <a href="https://redstarline.be/en">Red Star Line Museum</a>’s main exhibition.</em></p>
+<p><em>Two million passengers made the crossing from Antwerp to North America aboard the steamships of the Red Star Line. Their story, that of the shipping company that transported them and that of the city and the port from which they departed, are central to the <a href="https://redstarline.be/en" target="_blank" rel="noopener">Red Star Line Museum</a>’s main exhibition.</em></p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_mas">MAS</h4>
 <div class="paragraph">
-<p><em>The <a href="https://mas.be/">MAS aims to be an international and pioneering museum</a> about the global connectedness between people and collections from different cultures and environments. With a river of tales, viewed from multiple perspectives, we engage everyone to be curious about the present, past, and future of Antwerp and the world.</em></p>
+<p><em>The <a href="https://mas.be/" target="_blank" rel="noopener">MAS aims to be an international and pioneering museum</a> about the global connectedness between people and collections from different cultures and environments. With a river of tales, viewed from multiple perspectives, we engage everyone to be curious about the present, past, and future of Antwerp and the world.</em></p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_plantin_moretus">Plantin-Moretus</h4>
 <div class="paragraph">
-<p><em>In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their <a href="https://museumplantinmoretus.be/en">printing works, which had become a part of Antwerp’s heritage</a>.</em></p>
+<p><em>In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their <a href="https://museumplantinmoretus.be/en" target="_blank" rel="noopener">printing works, which had become a part of Antwerp’s heritage</a>.</em></p>
 </div>
 </div>
 </div>
@@ -124,26 +141,26 @@ BeJUG did not get any kind of sponsorship or deal from any of the places listed 
 <div class="sect3">
 <h4 id="_comics_art_museum">Comics Art Museum</h4>
 <div class="paragraph">
-<p>Belgium is famous for its beers and french fries, but missing out on the  influence it had worldwide on comic art. So if you love the ninth art, don&#8217;t hesitate to book a tour at <a href="https://www.comicscenter.net/en/home">the museum</a>.</p>
+<p>Belgium is famous for its beers and french fries, but missing out on the  influence it had worldwide on comic art. So if you love the ninth art, don&#8217;t hesitate to book a tour at <a href="https://www.comicscenter.net/en/home" target="_blank" rel="noopener">the museum</a>.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_magritte_museum">Magritte Museum</h4>
 <div class="paragraph">
-<p>Belgium was the home many famous painters, but if you like surrealism, or just appreciate nice and relaxing paintings, the <a href="https://musee-magritte-museum.be/en">Magritte Museum</a> is a great place to visit. As a bonus, it is located next to the royal palace (and other museums) in case you want to expand your cultural expedition.</p>
+<p>Belgium was the home many famous painters, but if you like surrealism, or just appreciate nice and relaxing paintings, the <a href="https://musee-magritte-museum.be/en" target="_blank" rel="noopener">Magritte Museum</a> is a great place to visit. As a bonus, it is located next to the royal palace (and other museums) in case you want to expand your cultural expedition.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_chez_cubitus">Chez Cubitus</h4>
 <div class="paragraph">
-<p>If you like playing board games while enjoying a fresh beer (or other non-alcoholic beverages), <a href="https://chezcubitus.be">this place</a> is probably for you.</p>
+<p>If you like playing board games while enjoying a fresh beer (or other non-alcoholic beverages), <a href="https://chezcubitus.be" target="_blank" rel="noopener">this place</a> is probably for you.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_cantillon_brewery">Cantillon Brewery</h4>
 <div class="paragraph">
 <p>Did you know that real Gueuze can only be manufactured in Brussels due to a specific yeast that only exists in the atmosphere of the city and its surroundings?
-If you like acidic beers or are just curious to discover how an ancestral blending process has evolved these days, <a href="http://www.cantillon.be/">Cantillon Brewery</a> is surely a reference in that matter. Booking is required for the best experience.</p>
+If you like acidic beers or are just curious to discover how an ancestral blending process has evolved these days, <a href="http://www.cantillon.be/" target="_blank" rel="noopener">Cantillon Brewery</a> is surely a reference in that matter. Booking is required for the best experience.</p>
 </div>
 </div>
 </div>
@@ -152,19 +169,19 @@ If you like acidic beers or are just curious to discover how an ancestral blendi
 <div class="sect3">
 <h4 id="_brugge_and_gent">Brugge and Gent</h4>
 <div class="paragraph">
-<p>The two cities <a href="https://www.visitbruges.be/en">Brugge</a> and <a href="https://visit.gent.be/en/see-do/inquiry-desk-visit-gent">Gent</a> are competing as they have the same values to offer: water and boats in the city, shopping streets, historical buildings, &#8230;&#8203; Maybe best to visit both, so you can make an informed choice for a next return visit?</p>
+<p>The two cities <a href="https://www.visitbruges.be/en" target="_blank" rel="noopener">Brugge</a> and <a href="https://visit.gent.be/en/see-do/inquiry-desk-visit-gent" target="_blank" rel="noopener">Gent</a> are competing as they have the same values to offer: water and boats in the city, shopping streets, historical buildings, &#8230;&#8203; Maybe best to visit both, so you can make an informed choice for a next return visit?</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_pairi_daiza">Pairi Daiza</h4>
 <div class="paragraph">
-<p>As "Probably The Best Zoo in Europe," <a href="https://www.pairidaiza.eu">Pairi Daiza</a> is a must-see for animal lovers. It&#8217;s on the other side of Belgium if you are in Antwerp (about 100km), but hey, it&#8217;s a tiny country ;-)</p>
+<p>As "Probably The Best Zoo in Europe," <a href="https://www.pairidaiza.eu" target="_blank" rel="noopener">Pairi Daiza</a> is a must-see for animal lovers. It&#8217;s on the other side of Belgium if you are in Antwerp (about 100km), but hey, it&#8217;s a tiny country ;-)</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_belgian_coast">Belgian Coast</h4>
 <div class="paragraph">
-<p><em><a href="https://www.belgium.be/en/about_belgium/tourism/the_coast">65 kilometer long stretch of sandy coastline with 15 resorts</a></em>.</p>
+<p><em><a href="https://www.belgium.be/en/about_belgium/tourism/the_coast" target="_blank" rel="noopener">65 kilometer long stretch of sandy coastline with 15 resorts</a></em>.</p>
 </div>
 <div class="paragraph">
 <p>According to some the most beautiful coastline in the world, while others hate the many high buildings. We leave the verdict to you&#8230;&#8203;</p>
@@ -181,38 +198,38 @@ If you like acidic beers or are just curious to discover how an ancestral blendi
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.axxes.be/nl/">Axxes Café/Restaurant Kinepolis</a>: Mexican and other food.</p>
+<p><a href="https://www.axxes.be/nl/" target="_blank" rel="noopener">Axxes Café/Restaurant Kinepolis</a>: Mexican and other food.</p>
 </li>
 <li>
-<p><a href="https://takumiramennoodles.com/be/">Takumi</a>: Japanese noodles and Rice/Curry, multiple locations in the city.</p>
+<p><a href="https://takumiramennoodles.com/be/" target="_blank" rel="noopener">Takumi</a>: Japanese noodles and Rice/Curry, multiple locations in the city.</p>
 </li>
 <li>
-<p><a href="https://www.littleseoul.be/en">Little Seoul</a>: Korean BBQ, more on the pricy side, city center.</p>
+<p><a href="https://www.littleseoul.be/en" target="_blank" rel="noopener">Little Seoul</a>: Korean BBQ, more on the pricy side, city center.</p>
 </li>
 <li>
-<p><a href="http://www.baiweichineserestaurant.be/">Bai Wei</a>: Chinese noodles, Chinatown district. The outside looks shabby, the inside is okay, food = great.</p>
+<p><a href="http://www.baiweichineserestaurant.be/" target="_blank" rel="noopener">Bai Wei</a>: Chinese noodles, Chinatown district. The outside looks shabby, the inside is okay, food = great.</p>
 </li>
 <li>
-<p><a href="https://curryosity.be/">Curryosity</a>: Indian curry. Bit off the beaten path but delicious.</p>
+<p><a href="https://curryosity.be/" target="_blank" rel="noopener">Curryosity</a>: Indian curry. Bit off the beaten path but delicious.</p>
 </li>
 <li>
-<p><a href="https://amadeus-resto.be/en/">Amadeus</a>: all you can eat spareribes, multiple locations, themed "old-timey".</p>
+<p><a href="https://amadeus-resto.be/en/" target="_blank" rel="noopener">Amadeus</a>: all you can eat spareribes, multiple locations, themed "old-timey".</p>
 </li>
 <li>
-<p><a href="https://www.restaurantdebomma.be/">Restaurant De Bomma</a>: wholesome Belgian food.</p>
+<p><a href="https://www.restaurantdebomma.be/" target="_blank" rel="noopener">Restaurant De Bomma</a>: wholesome Belgian food.</p>
 </li>
 <li>
-<p><a href="https://nl-nl.facebook.com/falafeltofantwerpen">Falaffeltof</a>: fallafels, in case you want a simpler meal.</p>
+<p><a href="https://nl-nl.facebook.com/falafeltofantwerpen" target="_blank" rel="noopener">Falaffeltof</a>: fallafels, in case you want a simpler meal.</p>
 </li>
 <li>
-<p><a href="https://caffenation.be/pages/antwerpcitycenter">Caffenation</a>: <em>an artisan specialty coffee roastery focused on more than just coffee</em>.</p>
+<p><a href="https://caffenation.be/pages/antwerpcitycenter" target="_blank" rel="noopener">Caffenation</a>: <em>an artisan specialty coffee roastery focused on more than just coffee</em>.</p>
 </li>
 <li>
-<p><a href="https://normocoffee.be/contact/">Normo</a>: coffee bar &amp;
+<p><a href="https://normocoffee.be/contact/" target="_blank" rel="noopener">Normo</a>: coffee bar &amp;
 micro roastery.</p>
 </li>
 <li>
-<p><a href="https://kolonelcoffee.be/locations">Kolonel Coffee</a>: <em>on a weekly basis we roast for our customers, our own bar, and our wholesale customers</em>.</p>
+<p><a href="https://kolonelcoffee.be/locations" target="_blank" rel="noopener">Kolonel Coffee</a>: <em>on a weekly basis we roast for our customers, our own bar, and our wholesale customers</em>.</p>
 </li>
 </ul>
 </div>
@@ -222,22 +239,22 @@ micro roastery.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.visit.brussels/en/visitors/where-to-eat/tram-experience">Tram Experience</a>: lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited&#8230;&#8203;</p>
+<p><a href="https://www.visit.brussels/en/visitors/where-to-eat/tram-experience" target="_blank" rel="noopener">Tram Experience</a>: lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited&#8230;&#8203;</p>
 </li>
 <li>
-<p><a href="https://www.kokob.be">KoKoB</a>: Ethiopian food. Traditionally, you eat with your hands, but you can request cutlery too.</p>
+<p><a href="https://www.kokob.be" target="_blank" rel="noopener">KoKoB</a>: Ethiopian food. Traditionally, you eat with your hands, but you can request cutlery too.</p>
 </li>
 <li>
-<p><a href="https://tapaslocas.be/">Tapas Locas</a>: The best place to eat tapas in Brussels, period.</p>
+<p><a href="https://tapaslocas.be/" target="_blank" rel="noopener">Tapas Locas</a>: The best place to eat tapas in Brussels, period.</p>
 </li>
 <li>
-<p><a href="https://schievelavabo.com">Schievelavabo</a>: Typical Belgium tavern food. Several locations.</p>
+<p><a href="https://schievelavabo.com" target="_blank" rel="noopener">Schievelavabo</a>: Typical Belgium tavern food. Several locations.</p>
 </li>
 <li>
-<p><a href="https://tero.be/en/restaurants/tero-restaurant-brussels/">Tero</a>: Gastronomic restaurant with an emphasis on locally sourced ingredients. More on the pricey side.</p>
+<p><a href="https://tero.be/en/restaurants/tero-restaurant-brussels/" target="_blank" rel="noopener">Tero</a>: Gastronomic restaurant with an emphasis on locally sourced ingredients. More on the pricey side.</p>
 </li>
 <li>
-<p><a href="https://wolf.be">Wolf</a>: A food market. Ideal for a group that can&#8217;t agree on the type of food they want to eat. Can be a bit noisy during  high affluence.</p>
+<p><a href="https://wolf.be" target="_blank" rel="noopener">Wolf</a>: A food market. Ideal for a group that can&#8217;t agree on the type of food they want to eat. Can be a bit noisy during  high affluence.</p>
 </li>
 </ul>
 </div>
@@ -247,7 +264,7 @@ micro roastery.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.biercentral.be/eng/">Bier Central</a>: <em>Enjoy Belgian classics in the mecca for true beer lovers in Ghent, Antwerp, Brussels, and Mechelen</em>.</p>
+<p><a href="https://www.biercentral.be/eng/" target="_blank" rel="noopener">Bier Central</a>: <em>Enjoy Belgian classics in the mecca for true beer lovers in Ghent, Antwerp, Brussels, and Mechelen</em>.</p>
 </li>
 </ul>
 </div>
@@ -260,10 +277,10 @@ micro roastery.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.velo-antwerpen.be/en">Velo</a> a bicycle-sharing service, you can buy a day/week pass</p>
+<p><a href="https://www.velo-antwerpen.be/en" target="_blank" rel="noopener">Velo</a> a bicycle-sharing service, you can buy a day/week pass</p>
 </li>
 <li>
-<p><a href="https://www.slimnaarantwerpen.be/en/public-transport/tram-bus">Public transportation</a> information on how to get around in Antwerpen using public transportation</p>
+<p><a href="https://www.slimnaarantwerpen.be/en/public-transport/tram-bus" target="_blank" rel="noopener">Public transportation</a> information on how to get around in Antwerpen using public transportation</p>
 </li>
 </ul>
 </div>
