--- a/partnership-guidelines.html
+++ b/partnership-guidelines.html
@@ -19,6 +19,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css"
           integrity="sha256-AbA177XfpSnFEvgpYu1jMygiLabzPCJCRIBtR5jGc0k=" crossorigin="anonymous">
     <link href="favicon.png" rel="shortcut icon">
+    <style>
+        /* Styling for AsciiDoc NOTE */
+        .admonitionblock.note {
+            background-color: var(--fbc-secondary-text);
+            padding: 10px;
+            color: #fff;
+            margin-bottom: 10px;
+        }
+
+        .title {
+            text-transform: uppercase;
+        }
+
+        .content {
+            padding-left: 10px;
+        }
+    </style>
 </head>
 
 <body>
